<resources>
    <string name="image_url">https://image.freepik.com/free-vector/autumn-falling-leaves-background_29865-875.jpg</string>
    <string name="image_url2">https://static.vecteezy.com/system/resources/previews/001/233/303/original/autumn-leaves-falling-on-floor-vector.jpg</string>
    <string name="image_url3">https://img5.goodfon.ru/original/3200x1200/8/c7/osen-listia-fon-doski-colorful-klen-wood-background-autum-11.jpg</string>
    <string name="image_url4">https://i.pinimg.com/736x/4f/35/af/4f35af09996b3332f23119d8132fbee0.jpg</string>
    <string name="image_url5">https://img5.goodfon.ru/original/3200x1200/d/a2/osen-listia-fon-doski-colorful-klen-wood-background-autumn-9.jpg</string>
    <string name="app_name">My Amazing Notes</string>
    <string name="note_monday">Понедельник</string>
    <string name="note_tuesday">Вторник</string>
    <string name="note_wednesday">Среда</string>
    <string name="note_thursday">Четверг</string>
    <string name="note_friday">Пятница</string>
    <string name="descThueday">Заметка 1 - понедельник</string>
    <string name="descTuesday">Заметка 2 - вторник</string>
    <string name="descWednesday">Заметка 3 - среда</string>
    <string name="descThursday">Заметка 4 - четверг</string>
    <string name="descFriday">Заметка 5 - пятница</string>
    <string name="firstJan">01.01.2021</string>
    <string name="secondJan">02.01.2021</string>
    <string name="thirdJan">03.01.2021</string>
    <string name="fourthJan">04.01.2021</string>
    <string name="fifthJan">05.01.2021</string>
    <string name="note_desc">NoteDesc</string>
    <string name="note_date">NoteDate</string>
    <string name="action_notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="family_notes">Family Notes</string>
    <string name="health_notes">Health Notes</string>
    <string name="sport_notes">Sport Notes</string>
    <string name="work_notes">Work Notes</string>
    <string name="main_notes">Main Notes</string>
    <string name="note_nav_driver">Note navigation driver</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="clear_all">Clear All</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="google_auth">AuthGoogle</string>
    <string name="alert_title">Хотите ли вы удалить запись?</string>
    <string name="alert_message">Удалить запись?</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="alert_title_add">Добавить запись?</string>
    <string name="alert_message_add">Добавить запись?</string>
</resources>