<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/note_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center"
        tools:text="@string/note_tuesday"/>

    <TextView
        android:id="@+id/note_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="start"
        tools:text="@string/note_desc"/>

    <TextView
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="start"
        tools:text="@string/note_date"/>

</LinearLayout>

